@@ -15,6 +15,7 @@
         <surefire.argline.opens>
             --add-opens scraphead.core/fr.ght1pc9kc.scraphead.core=ALL-UNNAMED
             --add-opens scraphead.core/fr.ght1pc9kc.scraphead.core.scrap=ALL-UNNAMED
+            --add-opens scraphead.core/fr.ght1pc9kc.scraphead.core.scrap.collectors=ALL-UNNAMED
         </surefire.argline.opens>
     </properties>
 
@@ -34,6 +35,10 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
         </dependency>
 
         <dependency>
